# rl_deploy

./: .clang-format  .gitignore  README.md  README.zh_CN.md  README_zh_CN.md  auto_doctor.sh  start_sim.sh
aimrl_sdk/: CMakeLists.txt  README.md  README.zh_CN.md  pyproject.toml
aimrl_sdk/examples/: rl_deploy_basic.py  rl_deploy_config.py  teleop_control.py
aimrl_sdk/examples/configs/: agibot_a2_dof12.yaml
aimrl_sdk/src/aimrl_sdk/: __init__.py  _bindings.pyi  obs.py
aimrl_sdk/src/aimrl_sdk/cmake/: GetAimRT.cmake
aimrl_sdk/src/aimrl_sdk/cmake/patches/: ApplyAimRTPatches.cmake  aimrt_ros2_serialize_buffer_fix.patch  aimrt_ros2_typesupport_rmw_fix.patch
aimrl_sdk/src/aimrl_sdk/config/: aimrt_iceoryx_backend.yaml  aimrt_ros2_backend.yaml
aimrl_sdk/src/aimrl_sdk/cpp/: aimrt_transport.hpp  bindings.cpp  closed_ankle.hpp  core.cpp  core.hpp  layout.hpp  ring_buffer.hpp  statistics.hpp  types.hpp
aimrl_sdk/src/aimrl_sdk/protocols/joint_msgs/: package.xml
aimrl_sdk/tools/: generate_pyi.py
deploy/: ros_dds_configuration.xml
deploy/deploy_assets/: CMakeLists.txt  package.xml
deploy/deploy_assets/cfg/: deploy.yaml
deploy/deploy_assets/scripts/: joy_interface.py  package.sh  start_rl_control_real.sh  start_rl_control_sim.sh
deploy/joint_msgs/: CMakeLists.txt
deploy/legged_system/: CMakeLists.txt  legged_system.xml  package.xml
deploy/legged_system/cfg/: iceoryx_chn_benchmark_cfg.yaml  iceoryx_chn_cfg.yaml  ros2_chn_cfg.yaml  ros_chn_benchmark_cfg.yaml
deploy/legged_system/cmake/: GetAimRT.cmake
deploy/legged_system/include/: ClosedAnkleWristParam.h  LeggedSystem.h  LoopAnkleAnalyticalSolver.h  Utilities.h
deploy/legged_system/src/: LeggedSystem.cpp  LoopAnkleAnalyticalSolver.cpp  Utilities.cpp
deploy/plotjuggler/: analysis.xml
deploy/rl_controllers/: CMakeLists.txt  package.xml
deploy/rl_controllers/cmake/: GetAimRT.cmake
deploy/rl_controllers/config/: baseline.yaml  joy.yaml
deploy/rl_controllers/include/rl_controllers/: AcController.h  HybridJointHandle.h  RLControllerBase.h  RotationTools.h  Types.h  Utilities.h
deploy/rl_controllers/launch/: rl_control_real.launch.py
deploy/rl_controllers/policy/A2/: model.onnx
deploy/rl_controllers/src/: AcController.cpp  RLControllerBase.cpp  Utilities.cpp
deploy/robot_descriptions_public/: CMakeLists.txt  README.md  README_EN.md  build.sh  display_model.sh  display_model_with_finger.sh  package.xml
deploy/robot_descriptions_public/launch/: display.launch.py
deploy/robot_descriptions_public/rviz/: display.rviz
deploy/robot_descriptions_public/urdf/: model.urdf  model_with_finger.urdf
dockerfile/: Dockerfile
mujoco_sim/: .gitignore  CMakeLists.txt  build.sh  format.sh
mujoco_sim/cmake/: GetAimRT.cmake
mujoco_sim/resource/model/a2_t2d0_ultra/config/: params.yaml
mujoco_sim/resource/model/a2_t2d0_ultra/meshes/: version.yaml
mujoco_sim/resource/model/a2_t2d0_ultra/meshes/compressed/: body.stl  head_link02.stl  left_arm_link01.stl  left_arm_link03.stl  left_arm_link04.stl  left_arm_link05.stl  left_hip_pitch.stl  left_hip_yaw.stl  left_tarsus.stl  left_toe_B_rod.stl  left_toe_roll.stl  left_wrist_rod_A.stl  right_arm_link01.stl  right_arm_link03.stl  right_arm_link04.stl  right_arm_link05.stl  right_arm_link06.stl  right_arm_link07.stl  right_hip_pitch.stl  right_hip_roll.stl  right_hip_yaw.stl  right_tarsus.stl  right_toe_pitch.stl  right_toe_roll.stl  right_wrist_motor_B.stl  right_wrist_rod_B.stl
mujoco_sim/resource/model/a2_t2d0_ultra/meshes/public/: left_wrist_motor_A.stl  left_wrist_motor_B.stl  left_wrist_rod_A.stl  left_wrist_rod_B.stl  right_toe_B_rod.stl  right_wrist_motor_A.stl  right_wrist_motor_B.stl  right_wrist_rod_A.stl  right_wrist_rod_B.stl
mujoco_sim/resource/model/a2_t2d0_ultra/mujoco/: model.xml
mujoco_sim/resource/model/a2_t2d0_ultra/mujoco/actuator/: arm.xml
mujoco_sim/resource/model/a2_t2d0_ultra/rviz/: display.rviz
mujoco_sim/resource/model/a2_t2d0_ultra/urdf/: left_ankle.urdf  left_wrist.urdf  model.urdf  model_collision.urdf  model_no_hand.urdf  model_public.urdf  model_with_hand.urdf  model_with_hand_public.urdf  right_ankle.urdf  right_wrist.urdf
mujoco_sim/resource/model/s6_hand/config/: params.yaml
mujoco_sim/resource/model/s6_hand/meshes/: version.yaml
mujoco_sim/resource/model/s6_hand/mujoco/: actuator.xml  asset.xml  left_hand_link.xml  right_hand_link.xml
mujoco_sim/resource/model/s6_hand/rviz/: display.rviz
mujoco_sim/resource/model/s6_hand/urdf/: left_hand.urdf  model.urdf  posture.urdf  right_hand.urdf
mujoco_sim/resource/model/terrain/meshes/: version.yaml
mujoco_sim/resource/model/terrain/mujoco/: slope.xml  stair.xml  temp.xml  terrain.xml  test.xml
mujoco_sim/src/: CMakeLists.txt
mujoco_sim/src/models/: CMakeLists.txt
mujoco_sim/src/module/mujoco_sim_module/: CMakeLists.txt  mujoco_sim_module.cc
mujoco_sim/src/module/mujoco_sim_module/publisher/: imu_sensor_publisher.cc  imu_sensor_publisher.h  joint_sensor_publisher.cc  joint_sensor_publisher.h  odometry_publisher.cc  odometry_publisher.h  touch_sensor_publisher.cc  touch_sensor_publisher.h
mujoco_sim/src/module/mujoco_sim_module/subscriber/: joint_actuator_subscriber.cc  joint_actuator_subscriber.h
mujoco_sim/src/protocols/: CMakeLists.txt
mujoco_sim/src/protocols/aimdk/protocol/common/: control_source.proto  header.proto  timestamp.proto
mujoco_sim/src/protocols/aimdk/protocol/hal/hand/: agi_claw.proto  agi_hand.proto  agi_o10_hand.proto  hand.proto  hand_channel.proto  inspire.proto  jodell.proto
mujoco_sim/src/protocols/joint_msgs/msg/: FootSensorState.msg
