[project]
name = "aimrl_sdk"
version = "0.1.0"
description = "AIMRL C++ SDK Python bindings via pybind11"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.21",
    "loguru>=0.7.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.3",
    "onnxruntime>=1.23.2",
]

[project.optional-dependencies]
stubs = [
    "pybind11-stubgen>=2.5.5",
]

[build-system]
requires = [
    "scikit-build-core>=0.9.0",
    "pybind11>=2.11.0",
    "empy>=3.3.4,<4.0",
    "catkin_pkg>=0.5.2",
    "lark>=1.1.5",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"

[tool.ruff]
line-length = 120

[tool.uv]
environments = ["sys_platform == 'linux'"]
