<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deploy_assets</name>
  <version>0.0.0</version>
  <description>Install thirdparty binaries and launch scripts into the colcon install space.</description>
  <maintainer email="agibotdev@agibot.com">agibotdev</maintainer>
  <license>Mulan PSL v2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
