<?xml version="1.0"?>
<package format="3">
  <name>robot_descriptions_public</name>
  <version>2.0.7</version>
  <description>robot_descriptions_public </description>

  <author email="yinfulong@zhiyuan-robot.com">Yin Fulong</author>

  <maintainer email="yinfulong@zhiyuan-robot.com">Yin Fulong</maintainer>

  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
